# HTTPServer_v2

./: README.md
HttpServer_v2/examples/: AnthropicClient.cc  AnthropicClient.h  ai_chat_sse_server.cc  ai_chat_ws_server.cc  chat_sse.html  chat_ws.html
HttpServer_v2/include/curl/: CurlMultiManager.h
HttpServer_v2/include/http/: HttpRequest.h  HttpServer.h
HttpServer_v2/include/middleware/cors/: CorsConfig.h
HttpServer_v2/include/session/: RedisSessionStorage.h  Session.h
HttpServer_v2/include/sse/: SseConnection.h
HttpServer_v2/include/utils/db/: DbConnection.h
HttpServer_v2/include/ws/: WsConnection.h  WsFrame.h
HttpServer_v2/src/curl/: CurlMultiManager.cpp
HttpServer_v2/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer_v2/src/router/: Router.cpp
HttpServer_v2/src/sse/: SseConnection.cpp
HttpServer_v2/src/ws/: WsConnection.cpp  WsFrame.cpp
chat_ui_v2/: CMakeLists.txt  README.md  README_v1.0.md  chat_main.cpp  chatui.html  config.json
chat_ui_v2/ai/: AIConfig.h  AIFactory.h  AIStrategies.h  AIStrategy.h  ModelRegister.h  OpenAICompatibleStrategy.h
chat_ui_v2/api/: ConversationHandlers.h  MessageHandler.h
chat_ui_v2/auth/: AuthHandlers.h  AuthMiddleware.h  PasswordUtil.h
chat_ui_v2/common/: JsonLite.h
chat_ui_v2/dao/: ConversationDao.h  MessageDao.h  UserDao.h
chat_ui_v2/sql/: init_v2.sql  migrate_from_v1.sql
